--- a/notebooks/RandomForest.ipynb
+++ b/notebooks/RandomForest.ipynb
@@ -303,6 +303,45 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# Hyperparameter tuning with frequent status updates\n",
+        "pipeline_cv = Pipeline([\n",
+        "    ('tfidf', TfidfVectorizer(max_features=50000, stop_words='english')),\n",
+        "    ('clf', OneVsRestClassifier(\n",
+        "        RandomForestClassifier(class_weight='balanced', n_jobs=-1, random_state=42, verbose=2)\n",
+        "    ))\n",
+        "])\n",
+        "\n",
+        "param_grid = {\n",
+        "    'clf__estimator__n_estimators': [20],\n",
+        "    'clf__estimator__max_depth': [None, 10, 20],\n",
+        "    'clf__estimator__min_samples_split': [2, 5, 10]\n",
+        "}\n",
+        "\n",
+        "grid_search = GridSearchCV(\n",
+        "    pipeline_cv,\n",
+        "    param_grid,\n",
+        "    cv=3,\n",
+        "    scoring='f1_macro',\n",
+        "    verbose=3,\n",
+        "    n_jobs=1\n",
+        ")\n",
+        "\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "print(f\"Best Params: {grid_search.best_params_}\")\n",
+        "print(f\"Best Score: {grid_search.best_score_}\")"
+      ],
+      "metadata": {
+        "id": "1FiA1rSFR8C5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# --- Model Definition and Training ---\n",
         "\n",
         "\n",
